{
    "name": "Controls",
    "maps": [
        {
            "name": "ControlActions",
            "id": "3b7c2e59-0ab2-4ecf-a2de-cb787c6bc6c4",
            "actions": [
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "0ae73c5e-437b-4be1-9876-e1db39adc380",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ca0e0329-e553-40c5-bcad-edb5528916d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60e4e53f-f29f-4a6b-96f4-bbb26823163a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fffba87a-686f-4ec9-867a-c56748236924",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ControlScheme",
            "bindingGroup": "ControlScheme",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}